--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ background-color: white;
   margin: 0 3%;
 }
 #pricing {
-  padding: 100px;
+  padding: 80px 15px;
   text-align: center;
 }
 .pricing-collum {
