--- a/css/styles.css
+++ b/css/styles.css
@@ -38,11 +38,11 @@ h3 {
 }
 
 .btn {
-  margin: 0 3%
+  margin: 1% 1%;
 }
 
 .container-fluid {
-  padding: 3% 5% 15%;
+  padding: 3% 15% 3% 15%;
 }
 
 .navbar {
@@ -89,10 +89,12 @@ background-color: white;
 }
 
 #testimonials {
-  padding: 7% 5%;
   text-align: center;
   color: #fff;
   background-color: #ef8172;
+}
+.carousel-item {
+    padding: 7% 15%;
 }
 
 #press {
@@ -106,26 +108,24 @@ background-color: white;
   margin: 0 3%;
 }
 #pricing {
-  padding: 80px 15px;
+  padding: 50px 15px;
   text-align: center;
 }
 .pricing-collum {
   padding: 2% 3%;
 }
+.nd-trow {
+  padding-left: 15%;
+}
 #cta {
   background-color: #ff4c68;
   text-align: center;
-  padding: 1%;
+  padding: 2%;
 }
 #cta h1 {
   color: white;
   width: 60%;
   margin: auto;
-}
-@media (max-width: 1080px) {
-  #cta h1 {
-   font-size: 1.5rem; 
-  }
 }
 #footer {
   text-align: center;
@@ -139,15 +139,32 @@ background-color: white;
   color: grey;
 }
 
-@media (max-width: 1080px) {
+@media (max-width: 1020px) {
   .iphone {
     transform: rotate(0deg);
     position: static;
+  }
+  .nd-trow {
+    padding:2% 0;
   }
   #title {
     text-align: center;
   }
   .title-row {
     padding-bottom: 3%;
+  }
+}
+@media (max-width: 800px) {
+  h1 {
+    font-size: 2rem;
+    font-weight: 600;
+  }
+#testimonials  h2 {
+    font-size: 2rem;
+  }
+  #footer i {
+    margin: 2% 3% 1%;
+    font-size: 20px;
+    color: black;
   }
 }
