--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,3 @@
-#title {
-  background-color: #ff4c68;
-  color: white;
-}
-
-.iphone {
-  transform: rotate(20deg);
-  width: 60%;
-}
-
 body {
   font-family: 'Montserrat';
 }
@@ -17,6 +7,7 @@ h1 {
   font-size: 3rem;
   line-height: 1.5;
   font-weight: 700;
+  color: white;
 }
 
 h2 {
@@ -32,9 +23,18 @@ h3 {
   font-weight: bold;
   color: black;
 }
-.iphone {
-  position: absolute;
 
+/* Title Section */
+
+#title {
+  background-color: #ff4c68;
+  color: white;
+}
+
+.iphone {
+  transform: rotate(20deg);
+  width: 60%;
+  position: absolute;
 }
 
 .btn {
@@ -44,6 +44,12 @@ h3 {
 .container-fluid {
   padding: 3% 15% 3% 15%;
 }
+
+.nd-trow {
+  padding-left: 15%;
+}
+
+/* Navigation Bar */
 
 .navbar {
   padding: 0 0 4rem;
@@ -64,10 +70,12 @@ h3 {
   font-family: 'Montserrat', light;
 }
 
+/* Features Section */
+
 #features {
   text-align: center;
   color: #8f8f8f;
-background-color: white;
+  background-color: white;
   padding: 7% 15%;
   position: relative;
 }
@@ -82,6 +90,8 @@ background-color: white;
   color: #ff4c68;
 }
 
+/* Testimonials Section */
+
 #testimonials img {
   border-radius: 100%;
   width: 10%;
@@ -93,8 +103,9 @@ background-color: white;
   color: #fff;
   background-color: #ef8172;
 }
+
 .carousel-item {
-    padding: 7% 15%;
+  padding: 7% 15%;
 }
 
 #press {
@@ -107,61 +118,78 @@ background-color: white;
   width: 15%;
   margin: 0 3%;
 }
+
+/* Pricing */
+
 #pricing {
   padding: 50px 15px;
   text-align: center;
 }
+
 .pricing-collum {
   padding: 2% 3%;
 }
-.nd-trow {
-  padding-left: 15%;
-}
+
+/* Call to Action */
+
 #cta {
   background-color: #ff4c68;
   text-align: center;
   padding: 2%;
 }
+
 #cta h1 {
-  color: white;
   width: 60%;
   margin: auto;
 }
+
+/* Footer */
+
 #footer {
   text-align: center;
 }
+
 #footer i {
   margin: 1% 1%;
   font-size: 30px;
   color: black;
 }
+
 #footer i:hover {
   color: grey;
 }
+
+/* Responsibility */
 
 @media (max-width: 1020px) {
   .iphone {
     transform: rotate(0deg);
     position: static;
   }
+
   .nd-trow {
-    padding:2% 0;
+    padding: 2% 0;
   }
+
   #title {
     text-align: center;
   }
+
   .title-row {
     padding-bottom: 3%;
   }
 }
+
 @media (max-width: 800px) {
   h1 {
     font-size: 2rem;
     font-weight: 600;
   }
-#testimonials  h2 {
+
+  #testimonials h2 {
     font-size: 2rem;
   }
+
   #footer i {
     margin: 2% 3% 1%;
     font-size: 20px;
